<resources>
    <string name="app_name">studentrentals</string>

    <!--BottomNavigation Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_profile">Profile</string>

    <!--Activity life circles -->
    <string name="clintion_villa">Clintion Villa</string>
    <string name="_4_4m_reviews">4.4M Reviews</string>
    <string name="sample_price">$ 3,500.00</string>
    <string name="sample_name">Clintion Villa</string>

    <!--TODO: Activity/Fragment lifecycle properties-->
    <string name="on_attach">On Attach</string>
    <string name="on_create">On create</string>
    <string name="on_create_view">On Create View</string>
    <string name="on_activity_created">On Activity Created</string>
    <string name="on_start">On Start</string>
    <string name="on_resume">On Resume</string>
    <string name="on_stop">On stop</string>
    <string name="on_destroy">On Destroy</string>
    <string name="on_restart">On Restart</string>
    <string name="on_pause">On pause</string>
    <string name="on_destroy_view">On destroy view</string>
    <string name="on_detach">On Detach</string>
    <string name="on_cancel">On Cancel</string>
    <string name="on_view_created">On View Created</string>
    <string name="on_attach_fragment">On Attach Fragment</string>
    <string name="ipsum">Ipsum Ipsum</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="james_minner">James Minner</string>
    <string name="property_owner">Property owner</string>
    <string name="kitchens">3 Kitchens</string>
    <string name="bathrooms">4 Bathrooms</string>
    <string name="dinings">3 Dinings</string>
    <string name="bedrooms">4 Bedrooms</string>
    <string name="descriptions">Descriptions:</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="photos">Photos</string>
    <string name="extra_const">Extra Cost\'s</string>
    <string name="table_layout_electriciy">Electricity</string>
    <string name="table_amount_electricity">$ 3.50</string>
    <string name="table_layout_water">Water</string>
    <string name="table_water">$ 23.00</string>
    <string name="table_layout_security">Security</string>
    <string name="table_amount_security">$ 120.00</string>
    <string name="table_layout_dust">Takataka</string>
    <string name="table_layout_rental_cost">Rental Cost\'s</string>
    <string name="table_amount_rental">$ 3,500.00</string>
    <string name="table_layout_const_name">Name</string>
    <string name="table_amount">Amount</string>
    <string name="table_payment_method">Methods/T &amp; C</string>
    <string name="table_method_bank">Bank</string>
    <string name="table_method_cash">Cash</string>
    <string name="table_method_mobile">Mobile</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_of_service"> 1. Terms</string>
    <string name="title_activity_map_view">Map</string>
    <string name="profile_toolbar">Profile</string>
    <string name="firstname">FirstName:</string>
    <string name="lastname">LastName:</string>
    <string name="fullname">FullName:</string>
    <string name="email">Email:</string>
    <string name="about">About:</string>
    <string name="lastupdated">Last Updated:</string>
    <string name="line_one">Phone1:</string>
    <string name="phone2">Phone2:</string>
    <string name="home_number">Home Number:</string>
    <string name="postal_code">Postal Code</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">cancel</string>
    <string name="agree">Agree</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="job_title">Job Title</string>
    <string name="update_profile">Update profile</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="apartment_type">Apartment Type</string>
    <string name="apartment_amount">Amount</string>
    <string name="apartment_terms">Payment Terms</string>
    <string name="room_name">Name</string>
    <string name="room_title">Title</string>
    <string name="room_total">Total</string>
    <string name="room_size">Size</string>
    <string name="room_desc">Description</string>
    <string name="payment_type">Payments</string>
    <string name="save">save</string>
    <string name="restaurants">restaurants</string>

<<<<<<< HEAD
<<<<<<< Updated upstream
=======

    <string name="bottom_sheet_option_camera">Upload new Apartment</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Actions</string>
    <string name="bottom_sheet_option_remove_photo">Logout</string>

=======
>>>>>>> 837c6f0bc54a4f72befbfdc679ef336bdb1e1769
    <string-array name="my_filters">
        <item>restaurants</item>
        <item>churches</item>
    </string-array>
<<<<<<< HEAD
>>>>>>> Stashed changes
=======
>>>>>>> 837c6f0bc54a4f72befbfdc679ef336bdb1e1769

</resources>
