<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra_const"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold">

    </TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_const_name"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/table_amount"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:gravity="start"
                android:padding="3dip"

                android:text="@string/table_payment_method"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_extra_costs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </TableLayout>

</LinearLayout>
