<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/dp_4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/house_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/sample_name"
        android:textStyle="bold"
        >

    </TextView>
    <TextView
        android:id="@+id/house_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/sample_price"

        >

    </TextView>
    <TextView
        android:id="@+id/house_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_name"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/clintion_villa"
        tools:targetApi="23"
        >

    </TextView>
    <TextView
        android:id="@+id/house_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_price"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/_4_4m_reviews"
        >

    </TextView>

</LinearLayout>