<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userAddress"
            type="com.student.models.DAddressData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/line_one"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginStart="@dimen/dp_15"
                    android:gravity="start"
                    android:padding="3dip"
                    android:textStyle="italic"
                    android:text="@{userAddress.lineOne, default=@string/ipsum}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/phone2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginStart="@dimen/dp_15"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@{userAddress.lineTwo, default=@string/ipsum}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/home_number"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginStart="@dimen/dp_15"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@{userAddress.homeNumber, default=@string/ipsum}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/postal_code"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginStart="@dimen/dp_15"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@{userAddress.postalCode, default=@string/ipsum}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/email"
                    android:textStyle="bold" />
                <TextView
                    android:layout_marginStart="@dimen/dp_15"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@{userAddress.email, default=@string/ipsum}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </TableRow>


        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>